<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="@dimen/margin_padding_size_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/title_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/title_hint"
            android:singleLine="true"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:text="@string/description"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/description_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/description_hint"
            android:singleLine="true"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:text="@string/date"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/date_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date_hint"
            android:singleLine="true"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:text="@string/save"
            android:textSize="@dimen/text_size_medium" />

    </LinearLayout>

</ScrollView>